[package]
name = "tlssocks5"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "fs", "sync"] }
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.2"
bytes = "1"
#rand = "0.8"
#once_cell = "1.18.0" # 使用最新稳定版本
#console-subscriber = "0.1"
#jemallocator = "0.5"
#mimallocator = { version = "0.1.3", default-features = false }
anyhow = { version = "1.0", default-features = false }
tokio-io-timeout = "1.2"

[profile.release]
#debug = true